# BancoDeBuracos

banco-de-buracos/: pyproject.toml
neuralineproject/: pyproject.toml
neuralineproject/src/: README.md  run.py
neuralineproject/src/app/: __init__.py  models.py  routes.py
neuralineproject/src/app/controllers/: __init__.py  database_controller.py  drive_controller.py
neuralineproject/src/app/models/: table.sql
neuralineproject/src/app/services/: drive_service.py
neuralineproject/src/app/static/css/: style.css
neuralineproject/src/app/templates/: base.html  index.html
neuralineproject/src/neuralineproject/: __init__.py
